org.eclipse.jdt.ui.tests.refactoring/resources/InlineMethodWorkspace/TestCases/invalid/TestCompileError3.java
package invalid;

public class TestCompileError3 {
	public void main() {
		/*]*/foo();/*[*/
	}
	
	public void foo() {
		{
	}
}
